# atomic-commit

./: .gitignore  README.md  asdfasdf  main.py  pyproject.toml
src/: atomic_commit.py
