[project]
name = "atomic-commit"
version = "1.0.1"
dependencies = [
    "ruff>=0.13.0",
]
requires-python = ">=3.12"
readme = {file = "README.md", content-type = "text/markdown"}

[project.scripts]
atomic-commit = "atomic_commit:run"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["atomic_commit"]